# eat-and-run

./: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  run.py  settings.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
agent/: graph.py  state.py  tools.py  utils.py
app/: __init__.py  bot.py  config.py  food_analyzer.py  main.py
common/: configuration.py
dbschema/: default.gel
dbschema/migrations/: 00001-m16pswe.edgeql
queries/: delete_meal.edgeql  delete_meal_async_edgeql.py  get_meal_by_name.edgeql  get_meal_by_name_async_edgeql.py  get_meals.edgeql  get_meals_async_edgeql.py  get_meals_by_date_range.edgeql  get_meals_by_date_range_async_edgeql.py  insert_meals.edgeql  insert_meals_async_edgeql.py  update_meal.edgeql  update_meal_async_edgeql.py
