[project]
name = "eat-and-run"
version = "0.1.0"
description = "Telegram Bot for tracking food and workouts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.19.0",
    "langchain[openai]>=0.3.21",
    "pydantic-settings>=2.8.1",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]


[tool.ruff]
target-version = "py312"
